<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_background">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/post_tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:background="@color/navigation_background"
        style="@style/Widget.Sx2libra.TabLayout"
        android:contentDescription="@string/post_tabs_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/menu_settings"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/menu_settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        style="@style/Widget.Sx2libra.IconButton"
        android:contentDescription="@string/menu_settings_description"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toStartOf="@id/user_avatar"
        app:layout_constraintTop_toTopOf="@id/post_tabs"
        app:layout_constraintBottom_toBottomOf="@id/post_tabs" />

    <FrameLayout
        android:id="@+id/user_avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/user_avatar_description"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/post_tabs"
        app:layout_constraintBottom_toBottomOf="@id/post_tabs">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/user_avatar_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_user_avatar_frame"
            android:clipToOutline="true"
            android:contentDescription="@string/user_avatar_description"
            android:padding="2dp"
            android:scaleType="centerCrop" />
    </FrameLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/post_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_tabs"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
